--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
     <h1>site escola</h1>
-    <h1>A ESCOLA É <strong>  TOP </strong> E <em> PROFESSORES SÃO LEGAIS</em></h1>
+    <P>A ESCOLA É <strong>  TOP </strong> E <em> PROFESSORES SÃO LEGAIS</em></P>
 
 
 </body>
