--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Antonio Diniz
+        <link rel="stylesheet" href="estilo.css">
+    </title>
 </head>
 <body>
+<header>
+    <h2>aqui é o meu cabeçalho </h2>
+</header>
+
+
 
     <h1>site escola</h1>
     <img src="download.jpeg" alt="karkékoiza">
